Sat Dec  4 11:39:17 2010  Eric Hodel  <drbrain@segment7.net>

	* ext/openssl/ossl_x509ext.c (initialize): add documentation.

Sat Dec  4 11:21:50 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* hash.c (rb_hash_update_by): new API for Hash#update.

Sat Dec  4 11:18:10 2010  Tanaka Akira  <akr@fsij.org>

	* class.c: parenthesize macro arguments.

Sat Dec  4 11:07:57 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* vm_core.h (rb_vm_inc_const_missing_count): missing prototype.

Sat Dec  4 08:50:10 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/iconv/iconv.c (Init_iconv): no warnings if $VERBOSE is nil.

Sat Dec  4 08:25:15 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* vm_insnhelper.c (vm_call_method): revert r30064 and r30071,
	  because of [ruby-core:26761]. Bug#4106 rejected.

Sat Dec  4 07:46:48 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/mkmf.rb (String#tr_cpp): substitute * with P like as
	  autconf.

Fri Dec  3 22:36:45 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* vm_insnhelper.c (vm_call_method): protected methods should be
	  checked against the real class.

Fri Dec  3 20:23:31 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/mkmf.rb (convertible_int): define printf format prefix too.

	* lib/mkmf.rb (convertible_int): detect convertible integer type.
	  port RUBY_REPLACE_INT from configure.in.

	* lib/mkmf.rb (check_sizeof): should return integer always.

Fri Dec  3 12:54:48 2010  NAKAMURA Usaku  <usa@ruby-lang.org>

	* win32/Makefile.sub (RCFLAGS): VC10 and after only. fixed the problem
	  of r30015. [ruby-core:33530]

Fri Dec  3 12:41:52 2010  URABE Shyouhei  <shyouhei@ruby-lang.org>

	* gc.c (rb_objspace_free): With our "lazy-sweep" GC engine, it is
	  possible for an object to survive until its surrounding object
	  space is about to be freed.  Those objects, if any, remains
	  leaked for the rest of a process life.  This is problematic
	  because for instance a T_DATA object may have its own destructor
	  to terminate something.