@@ -1,3 +1,7 @@
+Sun Dec  5 10:32:11 2010  Tanaka Akira  <akr@fsij.org>
+
+	* complex.c: parenthesize macro arguments.
+
 Sat Dec  4 11:39:17 2010  Eric Hodel  <drbrain@segment7.net>
 
 	* ext/openssl/ossl_x509ext.c (initialize): add documentation.
